WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209873
Regression(
r257963
) didFailProvisionalNavigation delegate no longer gets called when cancelling a cross-site provisional navigation
https://bugs.webkit.org/show_bug.cgi?id=209873
Summary
Regression(r257963) didFailProvisionalNavigation delegate no longer gets call...
Chris Dumez
Reported
2020-04-01 13:20:19 PDT
Regression(PSON) didFailProvisionalNavigation delegate no longer gets called when cancelling a cross-site provisional navigation.
Attachments
Patch
(5.62 KB, patch)
2020-04-01 13:33 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-04-01 13:20:29 PDT
<
rdar://problem/61132068
>
Chris Dumez
Comment 2
2020-04-01 13:33:48 PDT
Created
attachment 395196
[details]
Patch
Alex Christensen
Comment 3
2020-04-01 13:38:52 PDT
Comment on
attachment 395196
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=395196&action=review
> Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:136 > + FrameInfoData frameInfo {
FrameInfoData is supposed to only be created in the web process because otherwise it is out of date and the frame could've navigated underneath us. I don't see another way to do this though.
EWS
Comment 4
2020-04-01 14:01:46 PDT
Committed
r259362
: <
https://trac.webkit.org/changeset/259362
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395196
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug